--- a/docker-images/Dockerfile.validate
+++ b/docker-images/Dockerfile.validate
@@ -1,9 +1,9 @@
-FROM golang:1.15 AS builder
+FROM golang:1.17 AS builder
 RUN apt-get update -y && apt-get upgrade -y && apt-get install -y ca-certificates openssh-client git make
-RUN go get -u gopkg.in/yaml.v2
-RUN go get -u github.com/json-iterator/go
-RUN go get -u github.com/LF-Engineering/sync-data-sources/sources
+WORKDIR /go/src/github.com/LF-Engineering/
+RUN git clone https://github.com/LF-Engineering/sync-data-sources
 WORKDIR /go/src/github.com/LF-Engineering/sync-data-sources/sources
+RUN ls -l /go/src/github.com/LF-Engineering/sync-data-sources/sources
 RUN make -f ./Makefile dockerinstall
 FROM alpine
 RUN apk add git bash
